fix: corrected height of map section on quiz.html to be shorted on smaller screens by adjusting the relevant media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -818,7 +818,7 @@ h1, h2 {
         margin-top: 40px;
     }
     .map-section {
-        min-height: 1400px;
+        min-height: 1200px;
     }
 }
 
